# redesigned-parakeet-vowelizer

./: CMakeLists.txt  README.md  client  client.c  client.h  command_handler.c  command_handler.h  server  server.c  server.h  transmission.c  transmission.h  types.h  user_interface.c  user_interface.h
